feat: refatoração Pet